# PromptOptimization

./: .gitignore  README.md  pyproject.toml
mlartifacts/1/010ae2e07ccf426881926d52556d421d/artifacts/: result_table.json
mlartifacts/1/07470ae32b5a44f2837748ff2c48ef27/artifacts/: result_table.json
mlartifacts/1/07796d19f6644d068c7dc1e0382adcbd/artifacts/: result_table.json
mlartifacts/1/0bdb5db28ea14d8c8b9c3a83d568834a/artifacts/: model.json
mlartifacts/1/1694e50da42a492d8d58b575ef0012ee/artifacts/: result_table.json
mlartifacts/1/17ba8538dcde409a813bfc84c56ecd99/artifacts/: result_table.json
mlartifacts/1/1cce62322c314b12bc7e8b5e264a1e37/artifacts/: model.json
mlartifacts/1/1de4e87745d549108a1300db270c1698/artifacts/: result_table.json
mlartifacts/1/211f09b996434ff6a1d26511e9d55d3f/artifacts/: model.json  result_table.json
mlartifacts/1/21c740ea90c4475e91299995fa583e10/artifacts/: result_table.json
mlartifacts/1/2321b14ed9974005b8956ca8cf361197/artifacts/: result_table.json
mlartifacts/1/2ce1d109ee64496bb934d570ace73cf7/artifacts/: result_table.json
mlartifacts/1/2cfdae561fd04d8ea9e3ac2585b33530/artifacts/: model.json  result_table.json
mlartifacts/1/2f3d0ceb439c49aa94fffe857a3fba6f/artifacts/: result_table.json
mlartifacts/1/304d5e721c1f41f0a3cb99196799d2b4/artifacts/: model.json  result_table.json
mlartifacts/1/3569ac02ee704a8ca60c27eb02f92ed1/artifacts/: result_table.json
src/: main.py  system_monitor.py
src/experiments/: init-20-5-10-feedback-with-2103.txt  init-20-5-10-feedback-without-2100.txt
(+224 files in other folders)
